--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   height: 100%;
   width: 100%;
+  background-color:#bfbfbf;
 }
 
 .carousel-item{
@@ -23,7 +24,8 @@ body {
   background-color: #36454F;
   bottom: 0;
   color: white;
-  font-size: 20px;
+  font-size: 15px;
+   font-family: "Times New Roman", Times, serif;
 }
 
 .social img {
@@ -46,8 +48,8 @@ body {
   height: 100%;
 }
 .sponsors{
-  height:125px;
-  width:200px;
+  height:78px;
+  width:120px;
 }
 
 /* The hero image */
@@ -72,5 +74,20 @@ body {
 }
 .intro-text{
    text-shadow: 2px 2px 8px #FF0000;
-   width: 50%;
+   width:90%;
+}
+.splashImage{
+  height:350px;
+  width:350px;
+  border-radius:10px;
+}
+hr{
+  border:none;
+  height: 20px;
+ 	width: 90%;
+	height: 50px;
+	margin-top: 0;
+	border-bottom: 1px solid #FF0000;
+	box-shadow: 0 20px 20px -20px #333;
+  margin: -50px auto 10px;
 }
